--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node -e \"process.stdout.write(new Date().toISOString().replace(/[-:TZ.]/g, '').slice(0,14))\" | xargs -I{} sh -c \"VITE_BUILD_ID={} vite build\"",
+    "build": "node -e \"process.stdout.write(new Date().toISOString().replace(/[-:TZ.]/g, '').slice(0,14))\" | xargs -I{} sh -c \"VITE_BUILD_ID={} vite build\" && cp dist/index.html dist/404.html",
     "preview": "vite preview"
   },
   "dependencies": {
