--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -3,7 +3,7 @@ main = "src/index.ts"
 compatibility_date = "2024-01-01"
 
 [vars]
-ORIGIN_URL = "https://michaelwarren.github.io"
+ORIGIN_URL = "https://themichaelwarren.github.io"
 
 # Secrets (set via `wrangler secret put`):
 # GOOGLE_API_KEY  — read-only Google API key for Sheets
