--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -6,5 +6,7 @@ compatibility_date = "2024-01-01"
 ORIGIN_URL = "https://themichaelwarren.github.io"
 
 # Secrets (set via `wrangler secret put`):
-# GOOGLE_API_KEY  — read-only Google API key for Sheets
-# SPREADSHEET_ID  — the Camp spreadsheet ID
+# GOOGLE_API_KEY                    — read-only Google API key for Sheets
+# SPREADSHEET_ID                    — the Camp spreadsheet ID
+# GOOGLE_SERVICE_ACCOUNT_EMAIL      — service account email for Sheets proxy
+# GOOGLE_SERVICE_ACCOUNT_PRIVATE_KEY — service account PEM private key
